Updated desktop navbar to have dropdowns on hover/click Updated mobile navbar to be full screen, include dropdowns, and a footer Add new utility classes for flex-grow, bottom-0, and padding-left Todo: Fix expanding all options making footer go off screen on mobile navbar

--- a/src/public/assets/css/tailwind.output.css
+++ b/src/public/assets/css/tailwind.output.css
@@ -1423,7 +1423,9 @@ select {
 .min-w-0 {
   min-width: 0px;
 }
-
+.flex-grow {
+  flex-grow: 1;
+}
 .max-w-xl {
   max-width: 36rem;
 }
@@ -1567,7 +1569,9 @@ select {
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
-
+.bottom-0 {
+  bottom: 0px;
+}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1884,6 +1888,14 @@ select {
 
 .pl-2 {
   padding-left: 0.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem /* 16px */;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
 }
 
 .pl-8 {
